--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,13 @@
 @import 'src/assets/scss/main';
 
-main {
-    min-height: calc(100vh - 129.97px);
-}
-
-@media(min-width: 600px) {
+:host {
     main {
-        min-height: calc(100vh - 137.97px);
+        min-height: calc(100vh - 129.97px);
+    }
+    
+    @media(min-width: 600px) {
+        main {
+            min-height: calc(100vh - 137.97px);
+        }
     }
 }
