--- a/src/app/modules/home/layout/home.component.scss
+++ b/src/app/modules/home/layout/home.component.scss
@@ -1,80 +1,82 @@
 @import 'src/assets/scss/main';
 
-.img-container {
-  height: 180px;
-  position: relative;
-  margin-bottom: 2rem;
-}
-
-.intro {
-  @include flex(column, nowrap, center, center);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  color: $primary;
-  background: rgba(0, 0, 0, .6);
-  z-index: 2;
-  h1 {
-    font-size: 2.5rem !important;
-    margin-bottom: 1rem;
-    color: $primary;
-  }
-  p {
-    color: $white;
-  }
-}
-
-h2 {
-  font-size: 1.2rem !important;
-  text-align: center;
-  padding: 1rem 0;
-  margin-bottom: 1rem;
-  mat-icon {
-    vertical-align: middle;
-    margin-left: .8rem;
-    cursor: pointer;
-  }
-}
-
-.placements {
-  margin-bottom: 3rem;
-}
-
-a {
-  display: block;
-  width: 120px;
-  margin: auto;
-}
-
-@media(min-width: 700px) {
+:host {
   .img-container {
-    height: 200px;
-  }
-}
-
-@media(min-width: 768px) {
-  .intro > p {
-    font-size: 1.1rem;
-  }
-}
-
-@media(min-width: 1024px) {
-  .img-container {
-    height: 250px;
+    height: 180px;
+    position: relative;
+    margin-bottom: 2rem;
   }
 
   .intro {
+    @include flex(column, nowrap, center, center);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    color: $primary;
+    background: rgba(0, 0, 0, .6);
+    z-index: 2;
     h1 {
-      font-size: 3rem;
-      margin-bottom: 1.5rem;
+      font-size: 2.5rem !important;
+      margin-bottom: 1rem;
+      color: $primary;
+    }
+    p {
+      color: $white;
     }
   }
-}
 
-@media(min-width: 1280px) {
-  .img-container {
-    height: 300px;
+  h2 {
+    font-size: 1.2rem !important;
+    text-align: center;
+    padding: 1rem 0;
+    margin-bottom: 1rem;
+    mat-icon {
+      vertical-align: middle;
+      margin-left: .8rem;
+      cursor: pointer;
+    }
+  }
+
+  .placements {
+    margin-bottom: 3rem;
+  }
+
+  a {
+    display: block;
+    width: 120px;
+    margin: auto;
+  }
+
+  @media(min-width: 700px) {
+    .img-container {
+      height: 200px;
+    }
+  }
+
+  @media(min-width: 768px) {
+    .intro > p {
+      font-size: 1.1rem;
+    }
+  }
+
+  @media(min-width: 1024px) {
+    .img-container {
+      height: 250px;
+    }
+
+    .intro {
+      h1 {
+        font-size: 3rem;
+        margin-bottom: 1.5rem;
+      }
+    }
+  }
+
+  @media(min-width: 1280px) {
+    .img-container {
+      height: 300px;
+    }
   }
 }
