--- a/src/app/shared/components/season-filter/season-filter.component.scss
+++ b/src/app/shared/components/season-filter/season-filter.component.scss
@@ -1,10 +1,12 @@
 @import 'src/assets/scss/main';
 
-section {
+:host {
+  section {
     @include flex(row, nowrap, flex-start, center);
     margin-bottom: 1rem;
-}
-
-.mat-form-field {
-  width: 100%;
+  }
+  
+  .mat-form-field {
+    width: 100%;
+  }
 }
